--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
+    "d3": "5.16.0",
+    "fantasy-map-generator": "0.0.3",
     "fantasy-name-generator": "2.0.0",
     "phaser": "3.22.0"
   },
